--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,12 @@ margin:3px; display:inline-block;}
 .donate-text {padding: 10px 2px;}
 .donate-text p {font-size: 10px; line-height: 14px; color: #f7f7f7;}
 
+
+.side_widget .widgettitle {font-size: 16px; margin: 0px 0 10px; padding-bottom: 10px; border-bottom: 1px solid #ddd;}
+.side_widget ul li {display: inline-block; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 12px;}
+
+.recent-posts-2 {margin-top: 339px;}
+
 /* ---------------------------------------------------------------------------------------------------------
  * Content
  -------------------------------------------------------------------------------------------------------- */
