--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -207,6 +207,11 @@
 	.single .container {width: 480px;}
 }
 
+@media only screen and (max-width: 550px){
+	#page_header {height: 130px; line-height: 130px;}
+	.single header {padding-top: 50px;}
+}
+
 @media only screen and (max-width: 480px){
 	.single .container {width: 300px;}
 }
