--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -22,12 +22,13 @@ img#wpstats {display:none;}
 /* ---------------------------------------------------------------------------------------------------------
  * Header
  -------------------------------------------------------------------------------------------------------- */
-#page_header {height: 200px; line-height: 200px;}
+#page_header {height: 280px; line-height: 280px;}
 #page_header p {line-height: 200px; float: left;}
 #page_header nav {position: relative; float: right; z-index: 10;}
 #page_header nav a {color:#444; margin:0 0 0 15px; display:inline-block;}
 #page_header h1 {position: absolute; width: 100%; text-align: center; font-size: 24px; font-weight: normal; margin: 0;}
 #page_header h1 a {color: #111;}
+#page_header h1 a img {vertical-align: middle; margin-top: 5px;}
 #page_header:after {content: ''; clear: both; display: block;}
 
 /* ---------------------------------------------------------------------------------------------------------
