--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -329,6 +329,7 @@ body .crayon-theme-prism-like .crayon-pre .crayon-c {
 .single header {background: #f9f9f9; padding: 110px 0 50px; position: relative;}
 .single header #home {position: absolute; left: 20px; top: 20px; font-size: 22px; width: 40px; height: 40px;
   line-height: 40px; text-align: center; background: #fff; border-radius: 30px; padding-left: 2px; z-index: 100;}
+.single header #home img {width: 24px; text-align: center; vertical-align: middle; margin: -4px 0 0 0px;}
 .single header img {width: 220px; height: auto; margin-left: -10px;}
 .single .overview {margin: 0;}
 .single .container {width: 760px;}
