--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -179,6 +179,9 @@ margin:3px; display:inline-block;}
 
 
 #review_text .basic-text-box {padding: 10px 20px;}
+#review_text .basic-youtube-box {padding: 0 0 56.26% 0; position: relative; height: 100%;}
+#review_text .basic-youtube-box iframe {position: absolute; width: 100%; height: 100%;}
+
 #review_text .left-line-box {border-left: 3px solid #111; padding: 0 20px;}
 #review_text .bg-point-text {background: #F5F2F0; display: inline-block; padding: 0 6px;}
 #review_text .sub-title-text {margin:30px 0 10px; font-size: 18px; color: #111;}
