--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -139,7 +139,7 @@
 
 	#page_header p {display: none;}
 	#page_header h1 {line-height: 50px; position: static; padding-top: 45px;}
-	#page_header h1 a img {width: 120px;}
+	#page_header h1 a img {width: 200px; margin-top: 20px;}
 	#page_header nav {text-align:center; float: none; line-height: 30px;}
 	#page_header nav a {margin: 0 5px; line-height: 30px; padding: 0 5px;}
 	.ontheanvil > span {display:none;}
@@ -209,7 +209,7 @@
 }
 
 @media only screen and (max-width: 550px){
-	#page_header {height: 120px; line-height: 120px;}
+	#page_header {height: 160px; line-height: 120px;}
 	.single header {padding-top: 50px;}
 }
 
