--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -212,7 +212,7 @@ margin:3px; display:inline-block;}
 .comment-form-author label, .comment-form-email label, .comment-form-url label, .comment-form-comment label {position:absolute; margin:6px 0 0 10px;}
 
 .form-submit {clear:both; padding-top:10px;}
-.form-submit input {height:36px; padding:10px 0; width:96px; font-size: 12px; background:#33c1ab; color:#fff; letter-spacing:1px; border:0; cursor:pointer; transition: all 0.4s; opacity: 0.7;}
+.form-submit input {height:36px; padding:10px 0; width:96px; font-size: 12px; letter-spacing:1px; border:0; cursor:pointer; background: #f9f9f9; color: #33c1ab; border: 1px solid #33c1ab;}
 .form-submit input:hover {opacity: 1;}
 
 .comment-list {padding:20px 0 0 0; margin-top:40px; border-top:1px solid #ddd;}
