--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -22,7 +22,7 @@ img#wpstats {display:none;}
 /* ---------------------------------------------------------------------------------------------------------
  * Header
  -------------------------------------------------------------------------------------------------------- */
-#page_header {height: 220px; line-height: 220px; overflow: hidden;}
+#page_header {height: 220px; line-height: 220px; overflow: hidden; background: #fff;}
 #page_header nav {position: relative; float: left; z-index: 10; margin-left: 230px;}
 #page_header nav a {color:#000; margin:0 0 0 40px; display: inline-block; font-size: 16px;}
 #page_header h1 {position: absolute; width: 100%; text-align: left; font-size: 24px; font-weight: normal; margin: 0;}
@@ -329,13 +329,13 @@ body .crayon-theme-prism-like .crayon-pre .crayon-c {
  * New Single Style
  -------------------------------------------------------------------------------------------------------- */
 
-.single header {background: #f9f9f9; padding: 180px 0 50px; position: relative;}
-.single header #home {position: absolute; left: 20px; top: 20px; font-size: 22px; width: 40px; height: 40px;
+.single .overview header {background: #f9f9f9; padding: 60px 0 50px; position: relative;}
+.single .overview header #home {position: absolute; left: 20px; top: 20px; font-size: 22px; width: 40px; height: 40px;
   line-height: 40px; text-align: center; background: #fff; border-radius: 30px; padding-left: 2px; z-index: 100;}
-.single header #home img {width: 24px; text-align: center; vertical-align: middle; margin: -4px 0 0 0px;}
-.single header img {width: 220px; height: auto; margin-left: -10px;}
+.single .overview header #home img {width: 24px; text-align: center; vertical-align: middle; margin: -4px 0 0 0px;}
+.single .overview header img {width: 220px; height: auto; margin-left: -10px;}
 .single .overview {margin: 0;}
-.single .container {width: 760px;}
+.single .overview .container {width: 760px;}
 .single h1 {margin: 0; padding: 0; font-size: 28px;}
 .single .post_date {font-size: 14px; padding: 12px 2px 0;}
 .single .col_full,
