--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -126,9 +126,9 @@
 	.project_list.about_last .col_half {width:300px;}
 
 	#page_header p {display: none;}
-	#page_header h1 {line-height: 50px; position: static; padding-top: 45px;}
-	#page_header h1 a img {width: 200px; margin-top: 20px;}
-	#page_header nav {text-align:center; float: none; line-height: 30px;}
+	#page_header h1 {line-height: 50px; position: static; padding: 15px 0 10px;}
+	#page_header h1 a img {width: 140px; margin-top: 20px;}
+	#page_header nav {text-align: left; float: none; line-height: 30px; margin-left: 0;}
 	#page_header nav a {margin: 0 5px; line-height: 30px; padding: 0 5px;}
 	.ontheanvil > span {display:none;}
 
@@ -197,7 +197,7 @@
 }
 
 @media only screen and (max-width: 550px){
-	#page_header {height: 160px; line-height: 120px;}
+	#page_header {height: 180px; line-height: 120px;}
 	.single header {padding-top: 50px;}
 }
 
