--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -24,6 +24,10 @@
  * media query
  -------------------------------------------------------------------------------------------------------- */
 
+@media only screen and (min-width: 851px) {
+	.single .container {width: 760px;}
+}
+
 @media only screen and (max-width:1050px){
 	.container {width:800px; position:relative; margin:0 auto;}
 	.col_box {width:636px; margin-left:-20px; float:left;}
