--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -189,7 +189,7 @@
 
 	.single #page_header {padding-top: 0; position: absolute; width: 100%; left: 0;}
 	.single .overview header {padding-top: 160px;}
-	.single #page_header h1 a img {width: 80px; padding: 0; margin: 10 0 0 -6px;}
+	.single #page_header h1 a img {width: 80px; padding: 0; margin: 10px 0 0 -6px;}
 }
 
 
