모바일 푸터 스타일 수정

--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -183,7 +183,7 @@
 	.overview h1 {font-size: 20px;}
 	.single-post .overview h3 {font-size: 17px;}
 
-	#footer-nav, #copyright {float: none; text-align: center;}
+	#footer-nav, #copyright {float: none; }
 
 	/* single other posts */
 	#page_content #other-posts .other-posts-container .col {width: 100%; margin: 0 0 10px;}
