--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -22,9 +22,10 @@ img#wpstats {display:none;}
 /* ---------------------------------------------------------------------------------------------------------
  * Header
  -------------------------------------------------------------------------------------------------------- */
-#page_header {height: 220px; line-height: 220px; overflow: hidden; background: #fff;}
-#page_header nav {position: relative; float: left; z-index: 10; margin-left: 230px;}
-#page_header nav a {color:#000; margin:0 0 0 40px; display: inline-block; font-size: 16px; line-height: 40px;}
+#page_header {height: 320px; line-height: 320px; overflow: hidden; background: #fff;}
+#page_header nav {position: relative; float: left; z-index: 10; margin-left: 25%;}
+#page_header nav a {color:#000; margin:0 0 0 40px; display: inline-block; font-size: 14px; line-height: 40px;}
+#page_header nav a:first-child {margin-left: 20px;}
 #page_header h1 {position: absolute; width: 100%; text-align: left; font-size: 24px; font-weight: normal; margin: 0;}
 #page_header h1 a {color: #111;}
 #page_header h1 a img {vertical-align: middle; margin-left: -12px;}
