--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -202,6 +202,20 @@ margin:3px; display:inline-block;}
 
 
 /* ---------------------------------------------------------------------------------------------------------
+ * Content - tag
+ -------------------------------------------------------------------------------------------------------- */
+.search-tag-title {
+  font-size: 16px;
+  font-weight: normal;
+  color: #888;
+  margin-bottom: 10px;
+}
+
+.search-tag-title span {
+	color: #000;
+}
+
+/* ---------------------------------------------------------------------------------------------------------
  * comment
  -------------------------------------------------------------------------------------------------------- */
 #respond {padding: 5px 0;}
