--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -360,7 +360,7 @@ body .crayon-theme-prism-like .crayon-pre .crayon-c {
 .single .overview header #home img {width: 24px; text-align: center; vertical-align: middle; margin: -4px 0 0 0px;}
 .single .overview header img {width: 220px; height: auto; margin-left: -10px;}
 .single .overview {margin: 0;}
-.single h1 {margin: 0; padding: 0; font-size: 28px;}
+.single h1 {margin: 0; padding: 0; font-size: 28px; padding: 20px 0;}
 .single .post_date {font-size: 14px; padding: 12px 2px 0;}
 .single .col_full,
 .single .col_box {width: 100%; margin-left: 0; float: none;}
