코멘트 오류 수정 및 스타일 수정

--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -248,7 +248,7 @@ margin:3px; display:inline-block;}
 .comment-author.vcard {float:left; margin-right:10px; margin-top:-1px;}
 .comment-author.vcard cite {color: #33c1ab;}
 
-.comment-form-author label, .comment-form-email label, .comment-form-url label, .comment-form-comment label {display: none;}
+/*.comment-form-author label, .comment-form-email label, .comment-form-url label, .comment-form-comment label {display: none;}*/
 
 
 /* ---------------------------------------------------------------------------------------------------------
