--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -34,7 +34,7 @@ img#wpstats {display:none;}
 /*.single #page_header {height: 84px; position: fixed; width: 116px; z-index: 100; top: 2%; left: 2%; background: transparent;}
 .single #page_header h1 a img {width: 116px; padding: 10px;}
 .single #page_header nav {display: none;}*/
-
+.single #page_header {display: none;}
 #back-arrow-btn {position: fixed; top: 2%; left: 1.5%; width: 42px; height: 42px; background: #fff; border-radius: 25px; 
   text-align: center; vertical-align: middle; padding: 10px; z-index: 100;}
 #back-arrow-btn svg {transform: rotate(180deg);}
