--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -12,6 +12,8 @@
 .col_half {width:480px; margin-left:40px; float:left;}
 .col_full {width:796px;}
 
+.sidebar {position: absolute; left: 800px; top: 0;}
+.sidebar .first_ad_container {width: 200px;}
 
 /* ---------------------------------------------------------------------------------------------------------
  * basic query - home
@@ -26,6 +28,7 @@
 
 @media only screen and (min-width: 851px) {
 	.single .container {width: 760px;}
+	.sidebar {display: none;}
 }
 
 @media only screen and (max-width:1050px){
