other posts 반응형 스타일 수정

--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -169,6 +169,11 @@
 	#review_text {font-size: 13px;}
 	#review_text .basic-text-box {padding: 5px 10px;}
 
+	#other-posts .other-posts-container .col {width: 50%;}
+	#other-posts .other-posts-container .col > div > div h2 { height: 66px; }
+	#other-posts .other-posts-container .col > div > div h2 p { font-size: 12px; line-height: 18px; }
+	#other-posts .other-posts-container .col + .col + .col {display: none;}
+
 	/* category */
 	.category-essay #page_content article {width:300px; text-align:left;}
 	.category-essay #page_content article .thumb_text {display:block;}
